--- a/src/WordGrid.css
+++ b/src/WordGrid.css
@@ -7,7 +7,9 @@ body {
 }
 
 .word-grid-container {
-  display: block;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
 .word-grid {
@@ -74,4 +76,26 @@ body {
 
 .answer {
   width: 78vw;
+}
+
+.button-container {
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+  margin-bottom: 20px;
+  margin: auto;
+  margin-top: 10px;
+}
+
+button {
+  font-family: "Poppins", sans-serif;
+  padding: 10px 20px;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+  color: black;
+}
+
+.submit-button {
+  background-color: rgb(204, 206, 210);
 }
