--- a/src/WordsInput.css
+++ b/src/WordsInput.css
@@ -1,3 +1,7 @@
+body {
+  margin-top: 20px;
+}
+
 .words-input-container {
   display: flex;
   flex-direction: column;
@@ -52,6 +56,7 @@ button {
 .button-container {
   display: flex;
   gap: 10px;
+  margin-bottom: 20px;
 }
 
 .link-button {
