--- a/src/WordsInput.css
+++ b/src/WordsInput.css
@@ -1,7 +1,3 @@
-body {
-  margin-top: 20px;
-}
-
 .words-input-container {
   display: flex;
   flex-direction: column;
@@ -40,7 +36,8 @@ body {
   box-sizing: border-box;
 }
 
-.clear-button, .link-button {
+.clear-button,
+.link-button {
   font-family: "Poppins", sans-serif;
   padding: 10px 20px;
   border: none;
