--- a/src/Banner.css
+++ b/src/Banner.css
@@ -1,5 +1,5 @@
 .banner-container {
-  position: fixed;
+  position: absolute;
   top: 0;
   left: 0;
   width: 100%;
@@ -22,4 +22,9 @@
   background-color: white;
   border: 2px solid black;
   border-radius: 5px;
+}
+
+.banner-content {
+  margin: 10px;
+  margin-top: 10px;
 }
