--- a/src/WordGrid.css
+++ b/src/WordGrid.css
@@ -14,16 +14,18 @@
   font-family: "Poppins", sans-serif;
   padding: 2vw;
   text-align: center;
-  margin: 1vw;
+  margin: 5px;
   background-color: #f0f0f0;
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
   border-radius: 2vw;
   text-transform: uppercase;
   user-select: none;
-  width: 15vw;
-  height: 15vw;
+  width: 75px;
+  height: 75px;
+  max-width: 15vw;
+  max-height: 15vw;
   overflow: hidden;
-  font-size: 2.5vw;
+  font-size: min(2.5vw, 16px);
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -100,7 +102,6 @@
   margin-top: 10px;
 }
 
-.submit-button,
 .share-button {
   font-family: "Poppins", sans-serif;
   padding: 10px 20px;
@@ -108,13 +109,20 @@
   border-radius: 5px;
   cursor: pointer;
   color: black;
-  width: 15vh;
   margin: 10px;
   background-color: rgb(204, 206, 210);
 }
 
 .submit-button {
   margin: auto;
+  font-family: "Poppins", sans-serif;
+  padding: 10px 20px;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+  color: black;
+  width: 15vh;
+  background-color: rgb(204, 206, 210);
 }
 
 .loss-buttons {
