--- a/src/WordsInput.css
+++ b/src/WordsInput.css
@@ -1,15 +1,24 @@
-.words-input-container {
+.input-words-container {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  flex-wrap: wrap;
+  margin: 0 auto;
+  justify-content: center;
+}
+
+.input-button-container {
   display: flex;
   flex-direction: column;
   align-items: center;
-  max-width: 300px;
   margin: 0 auto;
 }
 
 .word-group {
-  margin-bottom: 20px;
+  margin: 10px;
   padding: 10px;
   border-radius: 5px;
+  max-width: 300px;
 }
 
 .yellow-word-group {
