--- a/src/WordGrid.css
+++ b/src/WordGrid.css
@@ -1,8 +1,3 @@
-.word-grid {
-  overflow-x: auto;
-  white-space: nowrap;
-}
-
 .word-row {
   display: flex;
   flex-wrap: wrap;
@@ -28,6 +23,7 @@
   display: flex;
   flex-direction: column;
   justify-content: center;
+  overflow-wrap: break-word;
 }
 
 .word-cell span {
