--- a/src/ValidationErrorList.css
+++ b/src/ValidationErrorList.css
@@ -1,9 +1,10 @@
 .validation-error-list {
+  width: 81%;
   font-family: "Poppins", sans-serif;
   font-size: 13px;
-  margin-bottom: 20px;
+  margin-top: 5px;
   padding: 10px;
-  border: 1px solid #e74c3c;
+  border: 2px solid #e74c3c;
   border-radius: 5px;
   background-color: #f8d7da;
 }
