--- a/src/Attempts.css
+++ b/src/Attempts.css
@@ -8,5 +8,6 @@
   height: 2vh;
   border-radius: 50%;
   background-color: rgb(90, 89, 78);
+  border: 2px solid rgb(64, 64, 56);
   margin-right: 5px;
 }
