--- a/src/Banner.css
+++ b/src/Banner.css
@@ -14,7 +14,7 @@
 
 .banner-text {
   font-family: "Poppins", sans-serif;
-  font-size: 15px;
+  font-size: min(2.5vw, 20px);
   color: black;
   margin: 20px;
   padding: 10px;
@@ -22,6 +22,7 @@
   background-color: white;
   border: 2px solid black;
   border-radius: 5px;
+  font-weight: 500;
 }
 
 .banner-content {
