Hide success screen

--- a/src/Attempts.css
+++ b/src/Attempts.css
@@ -9,5 +9,6 @@
   border-radius: 50%;
   background-color: rgb(90, 89, 78);
   border: 2px solid rgb(64, 64, 56);
-  margin-right: 5px;
+  margin-right: 2.5px;
+  margin-left: 2.5px;
 }
