--- a/src/WordsInput.css
+++ b/src/WordsInput.css
@@ -72,7 +72,7 @@
   margin-bottom: 5px;
   border-style: none;
   box-sizing: border-box;
-  font-weight: 500;
+  font-size: 20px
 }
 
 .puzzle-name-container {
@@ -97,7 +97,7 @@
 
 .game-link {
   font-family: "Poppins", sans-serif;
-  font-size: small;
+  font-size: 15px;
   margin-right: 5px;
   border: 2px solid rgb(144, 146, 150);
   border-radius: 5px;
@@ -106,18 +106,19 @@
 
 .game-link-button {
   font-family: "Poppins", sans-serif;
-  font-size: small;
   margin-bottom: 5px;
   background-color: rgb(204, 206, 210);
   border: 2px solid rgb(144, 146, 150);
   padding: 3px;
   border-radius: 5px;
+  font-size: 15px;
   font-weight: 500;
 }
 
 .clear-button {
   background-color: rgb(204, 206, 210);
   border: 2px solid rgb(144, 146, 150);
+  font-size: 20px;
   font-weight: 500;
 }
 
@@ -130,5 +131,6 @@
 .link-button {
   background-color: rgb(232, 167, 83);
   border: 2px solid rgb(195 127 39);
+  font-size: 20px;
   font-weight: 500;
 }
