--- a/src/WordsInput.css
+++ b/src/WordsInput.css
@@ -72,7 +72,7 @@
   margin-bottom: 5px;
   border-style: none;
   box-sizing: border-box;
-  font-size: 20px
+  font-size: 20px;
 }
 
 .puzzle-name-container {
