--- a/src/Banner.css
+++ b/src/Banner.css
@@ -8,8 +8,11 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  /* pointer-events: none; */
   z-index: 2000;
+}
+
+.banner-allow-interaction {
+  pointer-events: none;
 }
 
 .banner-text {
