--- a/src/WordGrid.css
+++ b/src/WordGrid.css
@@ -1,14 +1,12 @@
 .word-row {
   display: flex;
-  flex-wrap: wrap;
-  overflow-x: auto;
 }
 
 .word-cell {
   font-weight: 600;
   font-family: "Poppins", sans-serif;
   text-align: center;
-  margin: 0.9vw;
+  margin: 3.7px;
   background-color: #f0f0f0;
   border: 2px solid #cecccc;
   border-radius: 2vw;
@@ -16,7 +14,8 @@
   user-select: none;
   width: 20vw;
   height: 20vw;
-  max-height: 95px;
+  max-width: 140px;
+  max-height: 140px;
   overflow: hidden;
   font-size: min(3.1vw, 19px);
   display: flex;
@@ -85,7 +84,12 @@
 }
 
 .answer {
-  width: 88.2vw;
+  width: min(88.2vw, 98%);
+  max-width: 1000px;
+}
+
+.answer-final {
+  width: min(594px, 88.2vw);
 }
 
 .answers {
