--- a/src/play/Banner.css
+++ b/src/play/Banner.css
@@ -2,6 +2,7 @@
   position: absolute;
   left: 0;
   width: 100%;
+  height: 100%;
   display: flex;
   flex-direction: column;
   align-items: center;
