--- a/src/play/WordGrid.css
+++ b/src/play/WordGrid.css
@@ -66,11 +66,15 @@
   font-weight: 300;
 }
 
-.submit-container {
+.play-container {
   display: flex;
   flex-direction: column;
   gap: 10px;
   margin-top: 10px;
+}
+
+.play-buttons-container {
+  margin: auto;
 }
 
 .end-game-button {
@@ -86,8 +90,10 @@
   color: black;
 }
 
+.deselect-button,
+.share-button,
+.shuffle-button,
 .submit-button {
-  margin: auto;
   font-family: "Poppins", sans-serif;
   padding: 10px 20px;
   border-radius: 5px;
@@ -97,6 +103,7 @@
   font-size: 20px;
   font-weight: 500;
   color: black;
+  margin: 3px;
 }
 
 .loss-buttons {
