--- a/src/play/WordGrid.css
+++ b/src/play/WordGrid.css
@@ -85,7 +85,7 @@
   margin: 10px;
   background-color: rgb(204, 206, 210);
   border: 2px solid rgb(144, 146, 150);
-  font-size: 20px;
+  font-size: 18px;
   font-weight: 500;
   color: black;
 }
@@ -100,7 +100,7 @@
   cursor: pointer;
   background-color: rgb(204, 206, 210);
   border: 2px solid rgb(144, 146, 150);
-  font-size: 20px;
+  font-size: min(3.6vw, 20px);
   font-weight: 500;
   color: black;
   margin: 3px;
@@ -113,7 +113,7 @@
 
 .copy-text {
   font-family: "Poppins", sans-serif;
-  font-size: 20px;
+  font-size: min(3.6vw, 20px);
   font-weight: 500;
   margin: auto;
 }
