--- a/src/play/WordGrid.css
+++ b/src/play/WordGrid.css
@@ -106,6 +106,11 @@
   margin: 3px;
 }
 
+.submit-button {
+  background-color: rgb(232, 167, 83);
+  border: 2px solid rgb(195 127 39);
+}
+
 .loss-buttons {
   display: flex;
   flex-direction: column;
