--- a/src/create/CopyToClipboard.css
+++ b/src/create/CopyToClipboard.css
@@ -2,7 +2,7 @@
   font-family: "Poppins", sans-serif;
   font-size: 15px;
   margin-right: 5px;
-  border: 2px solid rgb(144, 146, 150);
+  border: 2px solid var(--grey-outline);
   border-radius: 5px;
   padding: 3px;
 }
@@ -10,8 +10,8 @@
 .copy-link-button {
   font-family: "Poppins", sans-serif;
   margin-bottom: 5px;
-  background-color: rgb(204, 206, 210);
-  border: 2px solid rgb(144, 146, 150);
+  background-color: var(--grey-color);
+  border: 2px solid var(--grey-outline);
   padding: 3px;
   border-radius: 5px;
   font-size: 15px;
