--- a/src/create/WordsInput.css
+++ b/src/create/WordsInput.css
@@ -10,8 +10,8 @@
   flex-direction: column;
   align-items: center;
   margin: auto;
-  background-color: rgb(238 240 245);
-  border: 2px solid rgb(90, 89, 78);
+  background-color: var(--light-grey-color);
+  border: 2px solid var(--dark-grey-color);
   border-radius: 5px;
   padding: 10px;
   max-width: 300px;
@@ -27,39 +27,39 @@
 }
 
 .yellow-word-group {
-  border: 2px solid rgb(230, 199, 61);
-  background-color: rgb(249, 223, 109);
+  border: 2px solid var(--yellow-outline);
+  background-color: var(--yellow-color);
 }
 
 .yellow-word-group input {
-  border: 2px solid rgb(230, 199, 61);
+  border: 2px solid var(--yellow-outline);
 }
 
 .green-word-group {
-  border: 2px solid rgb(114, 141, 61);
-  background-color: rgb(160, 195, 90);
+  border: 2px solid var(--green-outline);
+  background-color: var(--green-color);
 }
 
 .green-word-group input {
-  border: 2px solid rgb(114, 141, 61);
+  border: 2px solid var(--green-outline);
 }
 
 .blue-word-group {
-  border: 2px solid rgb(110, 149, 235);
-  background-color: rgb(176, 196, 239);
+  border: 2px solid var(--blue-outline);
+  background-color: var(--blue-color);
 }
 
 .blue-word-group input {
-  border: 2px solid rgb(110, 149, 235);
+  border: 2px solid var(--blue-outline);
 }
 
 .purple-word-group {
-  border: 2px solid rgb(154, 57, 173);
-  background-color: rgb(186, 129, 197);
+  border: 2px solid var(--purple-outline);
+  background-color: var(--purple-color);
 }
 
 .purple-word-group input {
-  border: 2px solid rgb(154, 57, 173);
+  border: 2px solid var(--purple-outline);
 }
 
 .word-input {
@@ -100,11 +100,11 @@
 }
 
 .clear-button {
-  background-color: rgb(204, 206, 210);
-  border: 2px solid rgb(144, 146, 150);
+  background-color: var(--grey-color);
+  border: 2px solid var(--grey-outline);
 }
 
 .link-button {
-  background-color: rgb(232, 167, 83);
-  border: 2px solid rgb(195 127 39);
+  background-color: var(--orange-color);
+  border: 2px solid var(--orange-outline);
 }
