--- a/src/common/NotFound.css
+++ b/src/common/NotFound.css
@@ -6,12 +6,12 @@
 
 .not-found-title {
   font-size: 2em;
-  color: #d9534f;
+  color: var(--not-found-title-color);
   font-family: "Poppins", sans-serif;
 }
 
 .not-found-text {
   font-size: 1.2em;
-  color: #777;
+  color: var(--dark-grey-color);
   font-family: "Poppins", sans-serif;
 }
