--- a/src/create/ValidationErrorList.css
+++ b/src/create/ValidationErrorList.css
@@ -4,13 +4,13 @@
   font-size: 20px;
   margin-top: 5px;
   padding: 10px;
-  border: 2px solid #e74c3c;
+  border: 2px solid var(--error-box-outline);
   border-radius: 5px;
-  background-color: #f8d7da;
+  background-color: var(--error-box-color);
 }
 
 .validation-error-list h3 {
-  color: #721c24;
+  color: var(--validation-error-text-color);
 }
 
 .validation-error-list ul {
@@ -19,6 +19,6 @@
 }
 
 .validation-error-list li {
-  color: #721c24;
+  color: var(--validation-error-text-color);
   margin-bottom: 5px;
 }
