--- a/src/play/WordGrid.css
+++ b/src/play/WordGrid.css
@@ -12,8 +12,8 @@
   font-family: "Poppins", sans-serif;
   text-align: center;
   margin: 3.7px;
-  background-color: #f0f0f0;
-  border: 2px solid #cecccc;
+  background-color: var(--light-grey-color);
+  border: 2px solid var(--light-grey-outline);
   border-radius: 2vw;
   text-transform: uppercase;
   user-select: none;
