Revert "Make word cell text dynamically sized"
This reverts commit c1a58e90297c1d734d944839958c067c22ae353f.

--- a/src/play/WordGrid.css
+++ b/src/play/WordGrid.css
@@ -7,7 +7,7 @@
   display: flex;
 }
 
-.answer-cell {
+.word-cell {
   font-weight: 600;
   font-family: "Poppins", sans-serif;
   text-align: center;
@@ -17,7 +17,7 @@
   border-radius: 10px;
   text-transform: uppercase;
   user-select: none;
-  width: auto;
+  width: 25%;
   height: 22vw;
   max-height: 140px;
   overflow: hidden;
@@ -26,6 +26,16 @@
   flex-direction: column;
   justify-content: center;
   overflow-wrap: break-word;
+}
+
+.word-cell.selected {
+  color: white;
+  background-color: var(--dark-grey-color);
+  border: 2px solid var(--dark-grey-outline);
+}
+
+.answer-cell {
+  width: auto;
 }
 
 .yellow-answer {
