--- a/src/create/CopyToClipboard.css
+++ b/src/create/CopyToClipboard.css
@@ -1,5 +1,5 @@
 .copy-link {
-  font-family: "Poppins", sans-serif;
+  font-family: var(--font);
   font-size: 15px;
   margin-right: 5px;
   border: 2px solid var(--grey-outline);
@@ -8,7 +8,7 @@
 }
 
 .copy-link-button {
-  font-family: "Poppins", sans-serif;
+  font-family: var(--font);
   margin-bottom: 5px;
   background-color: var(--grey-color);
   border: 2px solid var(--grey-outline);
