--- a/src/play/Banner.css
+++ b/src/play/Banner.css
@@ -13,7 +13,7 @@
 }
 
 .banner-text {
-  font-family: "Poppins", sans-serif;
+  font-family: var(--font);
   font-size: 20px;
   color: black;
   margin: 20px;
